.metadata/.plugins/org.eclipse.cdt.ui/13_Classes and Objects.build.log
23:57:30 **** Incremental Build of configuration Debug for project 13_Classes and Objects ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\main.o" "..\\src\\main.cpp" 
..\src\main.cpp: In function 'int main()':
..\src\main.cpp:40:8: error: 'class Student' has no member named 'set_age'
     st.set_age(age);
        ^~~~~~~
..\src\main.cpp:41:8: error: 'class Student' has no member named 'set_standard'
     st.set_standard(standard);
        ^~~~~~~~~~~~
..\src\main.cpp:42:8: error: 'class Student' has no member named 'set_first_name'
     st.set_first_name(first_name);
        ^~~~~~~~~~~~~~
..\src\main.cpp:43:8: error: 'class Student' has no member named 'set_last_name'
     st.set_last_name(last_name);
        ^~~~~~~~~~~~~
..\src\main.cpp:45:16: error: 'class Student' has no member named 'get_age'
     cout << st.get_age() << "\n";
                ^~~~~~~
..\src\main.cpp:46:16: error: 'class Student' has no member named 'get_last_name'
     cout << st.get_last_name() << ", " << st.get_first_name() << "\n";
                ^~~~~~~~~~~~~
..\src\main.cpp:46:46: error: 'class Student' has no member named 'get_first_name'
     cout << st.get_last_name() << ", " << st.get_first_name() << "\n";
                                              ^~~~~~~~~~~~~~
..\src\main.cpp:47:16: error: 'class Student' has no member named 'get_standard'
     cout << st.get_standard() << "\n";
                ^~~~~~~~~~~~
..\src\main.cpp:49:16: error: 'class Student' has no member named 'to_string'
     cout << st.to_string();
                ^~~~~~~~~

23:57:31 Build Finished (took 654ms)

